# fastapi-auth-backend

./: .gitignore  LICENSE  pyproject.toml
auth_backend/adapters/: __init__.py
auth_backend/adapters/users/: __init__.py  password_hasher.py  token_handler.py
auth_backend/api/: container.py  main.py  settings.py
auth_backend/api/users/: __init__.py  get_me.py  login.py  register.py
auth_backend/api/users/common/: user_response.py
auth_backend/app/: __init__.py
auth_backend/app/users/: __init__.py  exceptions.py  get_by_token.py  login.py  registration.py
auth_backend/app/users/abc/: __init__.py  password_hasher.py  token_handler.py  users_repository.py
auth_backend/app/users/common/: __init__.py  auth_data.py
auth_backend/core/: user.py
auth_backend/infrastructure/postgres/: __init__.py  pool.py  users_repository.py
dockerfiles/: docker-compose.dev.yml
dockerfiles/postgres/: Dockerfile  init.sql
tests/unit/app/users/: test_auth_data.py  test_interactor_get_by_token.py  test_interactor_registrate.py  test_intractor_login.py
tests/unit/core/: test_user.py
