[tool.poetry]
name = "auth-backend"
version = "0.1.0"
description = ""
authors = ["OlehDziuba <oleg_dzuba@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"
fastapi = "^0.111.0"
asyncpg = "^0.29.0"
dependency-injector = "^4.41.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
